[package]
name = "tower-sessions-dynamodb-store"
version = "0.2.0"
edition = "2021"
description = "AWS DynamoDB session store. Not for direct use; see the `tower-sessions` crate for details."
authors = ["Kirk Peterson <necrobious@gmail.com>"]
license = "MIT"
homepage = "https://github.com/necrobious/tower-sessions-dynamodb-store"
keywords = ["session", "sessions", "cookie", "tower", "dynamodb"]
categories = ["asynchronous", "network-programming", "web-programming"]
repository = "https://github.com/necrobious/tower-sessions-dynamodb-store"
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
async-trait = "0.1" 
aws-config = "1.2"
aws-sdk-dynamodb = "1.22"
rmp-serde = { version = "1.2" }
serde = { version = "1.0", features = ["derive", "rc"] }
thiserror = "1.0"
time = { version = "0.3", features = ["serde"] }
tower-sessions = "0.12"
tracing = "0.1.40"

[dev-dependencies]
axum = "0.7"
tokio = { version = "1.37", features = ["full"] }
tower-sessions-core = { version = "0.12", features = ["deletion-task"] }
tower = { version = "0.4", features = ["timeout"] }
tokio-test = "0.4"
tower-cookies = "0.10.0"

[[example]]
name = "counter"

