[package]
name = "tower-sessions-dynamodb-store"
version = "0.3.0"
edition = "2021"
description = "AWS DynamoDB session store. Not for direct use; see the `tower-sessions` crate for details."
authors = ["Kirk Peterson <necrobious@gmail.com>"]
license = "MIT"
homepage = "https://github.com/necrobious/tower-sessions-dynamodb-store"
keywords = ["session", "sessions", "cookie", "tower", "dynamodb"]
categories = ["asynchronous", "network-programming", "web-programming"]
repository = "https://github.com/necrobious/tower-sessions-dynamodb-store"
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
async-trait = "0.1" 
aws-config = "1.5"
aws-sdk-dynamodb = "1.59"
rmp-serde = { version = "1.3" }
serde = { version = "1.0", features = ["derive", "rc"] }
thiserror = "2.0"
time = { version = "0.3", features = ["serde"] }
tower-sessions = "0.14"
tracing = "0.1.40"

[dev-dependencies]
axum = "0.8"
tokio = { version = "1.37", features = ["full"] }
tower-sessions-core = { version = "0.14", features = ["deletion-task"] }
tower = { version = "0.5", features = ["timeout"] }
tokio-test = "0.4"
tower-cookies = "0.11.0"

[[example]]
name = "counter"

